# servicenow-to-gbnf

./: .gitignore  CHANGELOG.md  NOTICE.txt  README.md  cli.py  pyproject.toml
.github/: WORKFLOW_PENDING.md
.github/workflows/: ci.yml
core/: converter.py  extractor.py  schema_processor.py
servicenow_to_gbnf/: __init__.py  cli.py
servicenow_to_gbnf/core/: __init__.py  converter.py  extractor.py  iii_generator.py  schema_processor.py
servicenow_to_gbnf/grammars/examples/: incident-create.json
servicenow_to_gbnf/templates/: __init__.py  prompt.txt.j2  worker.py.j2
templates/: worker.py.j2
tests/: conftest.py  test_cli.py  test_converter.py  test_extractor.py  test_iii_generator.py  test_schema_processor.py
tests/fixtures/: servicenow-incident.yaml
