[project]
name = "servicenow-to-gbnf"
version = "0.2.0"
description = "ServiceNow → GBNF grammar + iii worker generator. Open-source deterministic AI connector."
authors = [{ name = "intelege-ma" }]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
keywords = ["servicenow", "gbnf", "iii", "constrained-decoding", "deterministic-ai", "local-llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "jinja2>=3.1",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "rich>=13",
]

[project.urls]
Homepage = "https://github.com/intelege-ma/servicenow-to-gbnf"
Repository = "https://github.com/intelege-ma/servicenow-to-gbnf"
Issues = "https://github.com/intelege-ma/servicenow-to-gbnf/issues"

[project.scripts]
"servicenow-to-gbnf" = "servicenow_to_gbnf.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["servicenow_to_gbnf*"]

[tool.setuptools.package-data]
servicenow_to_gbnf = [
    "templates/*.j2",
    "core/vendor/*.py",
    "grammars/examples/*.json",
    "grammars/examples/*.gbnf",
]

[tool.uv]
dev-dependencies = ["pytest>=8", "ruff>=0.6", "mypy>=1.10"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.10"]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = [
    "servicenow_to_gbnf/core/vendor",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = [
    "E501",
    "B008",
    "UP007",
    "UP045",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
